# coffee-gb

./: .gitignore  .travis.yml  CLAUDE.md  CODE_OF_CONDUCT  GEMINI.md  LICENSE  README.md  debug.sh  pom.xml  roms  run.sh
.claude/skills/fix-compatibility-issue/: SKILL.md
.claude/skills/fix-compatibility-issue/agents/: openai.yaml
.claude/skills/merge-pr/: SKILL.md
.claude/skills/merge-pr/agents/: openai.yaml
.claude/skills/release-new-version/: SKILL.md
.claude/skills/release-new-version/agents/: openai.yaml
.claude/skills/release-new-version/scripts/: versions.py
.github/workflows/: maven-release.yml  maven.yml  retroachievements-natives.yml
controller/: pom.xml
controller/src/main/native/: CMakeLists.txt  coffee_rcheevos.c  coffee_rcheevos.h
controller/src/main/resources/darwin-aarch64/: libcoffee_rcheevos.dylib
controller/src/main/resources/darwin-x86-64/: libcoffee_rcheevos.dylib
controller/src/test/resources/legacy/: README.md  coffee-gb-1.7.13-cpu-instrs.sn  coffee-gb-1.7.14-cpu-instrs.sn
core/: pom.xml
core/src/main/resources/: simplelogger.properties
core/src/main/resources/cheats/: SOURCE.md
core/src/test/resources/: simplelogger.properties
core/src/test/resources/roms/bullygb/: LICENSE  SOURCE.md  bully.gb
core/src/test/resources/roms/casualpokeplayer/: LICENSE  SOURCE.md  known-failures.tsv  latch-rtc-test.gb  ramg-mbc3-test.gb  rtc-invalid-banks-test.gb  sgb-ext-test.gb
core/src/test/resources/roms/cgb-acid-hell/: LICENSE  SOURCE.md  cgb-acid-hell.gbc
core/src/test/resources/roms/cgb-acid2/: SOURCE.md
core/src/test/resources/roms/codebreaker/: In-Game Rumble Demo (PD) [C].gbc  SOURCE.md
core/src/test/resources/roms/daid/: LICENSE  README.md  ppu_scanline_bgp.gb  rom_and_ram.gb  speed_switch_timing_div.gbc  speed_switch_timing_ly.gbc  speed_switch_timing_stat.gbc  stop_instr.gb  stop_instr_gbc_mode3.gb
core/src/test/resources/roms/gambatte/: SOURCE.md  current-baseline.tsv
core/src/test/resources/roms/gbc-hw-tests/: SOURCE.md  known-failures.txt
core/src/test/resources/roms/gbmicrotest/: LICENSE  SOURCE.md  known-failures.txt
core/src/test/resources/roms/mbc30/: SOURCE.md
core/src/test/resources/roms/mealybug/: SOURCE.md  (+30 more)
doc/: ui-performance.md
doc/derived/: apu-model.md  cpu-interrupt-model.md  ppu-stat-model.md
src/test/resources/: simplelogger.properties
src/test/resources/roms/: dmg_sound.gb  oam_bug.gb  super-mario-land.gb
src/test/resources/roms/oam_bug/: 1-lcd_sync.gb  2-causes.gb  3-non_causes.gb  4-scanline_timing.gb  5-timing_bug.gb  6-timing_no_bug.gb  7-timing_effect.gb  8-instr_effect.gb
src/test/resources/roms/oam_bug-2/: 2-causes.gb  3-non_causes.gb  4-scanline_timing.gb  7-timing_effect.gb
swing/: pom.xml
(+1092 files in other folders)
